--- a/css/estilo.css
+++ b/css/estilo.css
@@ -46,6 +46,7 @@ header {
     height: 100px;
     width: 100%;
     background-color: #4b543a;
+    z-index: 2;
 }
 
 .header__logo {
@@ -268,12 +269,7 @@ footer {
 
 }
 
-@media screen and (max-width: 500px) {
-
-
-
-
-}
+@media screen and (max-width: 500px) {}
 
 /* MEDIA QUERIES INDEX */
 
@@ -486,7 +482,7 @@ span,
         padding-top: 30px;
     }
 
-  
+
 
     .redes__link {
         justify-content: space-between;
@@ -563,7 +559,7 @@ span,
     justify-content: center;
 
     max-width: 100%;
-  
+
 }
 
 .main__tour__contenedor {
@@ -603,7 +599,7 @@ span,
     margin-left: 70px;
     text-align: center;
 
-   
+
 }
 
 .contenedor_1 {
@@ -620,9 +616,6 @@ span,
 
     width: 350px;
     height: 350px;
-
-
-
 }
 
 .titulo__c__1 {
@@ -726,9 +719,9 @@ span,
     .f_tour {
         height: 400px;
     }
-       
-    
-    }
+
+
+}
 
 
 @media screen and (max-width: 1100px) {
@@ -766,7 +759,7 @@ span,
         margin: auto;
 
         margin-bottom: 0px;
-   
+
         text-align: center;
         color: #b9ac28;
     }
@@ -813,3 +806,315 @@ span,
     }
 }
 
+
+
+
+/* ---------------  ALBUMS  --------------------- */
+
+
+.main__albums {
+    width: 100%;
+    height: 1000px;
+    background-color: #131311;
+}
+
+.contenedor__albums {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    z-index: 1;
+
+}
+
+.portada1 {
+    background: url(../imagenes/blurryfaceportada.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    border-radius: 10px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #4b543a;
+
+    box-shadow: 0px 0px 20px 0px #eb523b;
+
+
+    margin: 20px;
+    width: 310px;
+    height: 310px;
+    opacity: .8;
+    transition: 0.5s;
+}
+
+.portada1:hover {
+    width: 380px;
+    height: 380px;
+}
+
+.titulo__portada1 {
+    font-size: 1rem;
+    color: white;
+    height: 500px;
+    display: flex;
+    align-items: flex-end;
+}
+
+.portada2 {
+    background: url(../imagenes/trenchportada.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+
+    border-radius: 10px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #4b543a;
+
+    box-shadow: 0px 0px 20px 0px #5e5815;
+
+
+    margin: 20px;
+    width: 310px;
+    height: 310px;
+    opacity: .8;
+    transition: 0.5s;
+}
+
+.portada2:hover {
+    width: 380px;
+    height: 380px;
+    opacity: 1;
+}
+
+.titulo__portada2 {
+    font-size: 1rem;
+    color: white;
+    height: 500px;
+    display: flex;
+    align-items: flex-end;
+}
+
+
+.portada3 {
+    background: url(../imagenes/scaledicy.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    border-radius: 10px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #4b543a;
+
+    box-shadow: 0px 0px 20px 0px #fd89ac;
+
+
+    width: 310px;
+    height: 310px;
+    opacity: .8;
+    transition: 0.5s;
+}
+
+.portada3:hover {
+    width: 380px;
+    height: 380px;
+}
+
+.titulo__portada3 {
+    font-size: 1rem;
+    color: white;
+    height: 500px;
+    display: flex;
+    align-items: flex-end;
+}
+
+
+.portada4 {
+    background: url(../imagenes/vesseltop.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    border-radius: 10px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #4b543a;
+
+    box-shadow: 0px 0px 20px 0px #d0d0cf;
+
+
+    margin: 20px;
+    width: 310px;
+    height: 310px;
+    opacity: .8;
+    transition: 0.5s;
+}
+
+.portada4:hover {
+    width: 380px;
+    height: 380px;
+}
+
+.titulo__portada4 {
+    font-size: 1rem;
+    color: white;
+    height: 500px;
+    display: flex;
+    align-items: flex-end;
+}
+
+
+@media screen and (max-width:768px) {
+
+    header {
+        position: sticky;
+        top: 0;
+    }
+
+    .main__albums {
+        width: 100%;
+        height: 1000px;
+        background-color: #131311;
+    }
+
+    .contenedor__albums {
+        flex-direction: column;
+    }
+
+    .main__albums {
+        height: 3000px;
+    }
+
+    .portada1 {
+        margin: 150px;
+        opacity: none;
+        width: 400px;
+        height: 400px;
+    }
+
+    .portada2 {
+        margin: 120px;
+        opacity: none;
+        width: 400px;
+        height: 400px;
+    }
+
+    .portada3 {
+        margin: 120px;
+        opacity: none;
+        width: 400px;
+        height: 400px;
+    }
+
+    .portada4 {
+        margin: 120px;
+        opacity: none;
+        width: 400px;
+        height: 400px;
+    }
+
+    .titulo__portada1 {
+        font-size: 2rem;
+        height: 600px;
+    }
+
+    .titulo__portada2 {
+        font-size: 2rem;
+        height: 600px;
+    }
+
+    .titulo__portada3 {
+        font-size: 2rem;
+        height: 600px;
+    }
+    
+    .titulo__portada4 {
+        font-size: 2rem;
+        height: 600px;
+    }
+
+
+}
+
+@media screen and (max-width:1024px) {
+
+    .main__albums {
+
+        height: 3000px;
+ 
+    }
+
+    .contenedor__albums {
+        flex-direction: column;
+    }
+
+
+    .portada1 {
+        margin: 150px;
+        opacity: none;
+        width: 400px;
+        height: 400px;
+    }
+
+    .portada2 {
+        margin: 120px;
+        opacity: none;
+        width: 400px;
+        height: 400px;
+    }
+
+    .portada3 {
+        margin: 120px;
+        opacity: none;
+        width: 400px;
+        height: 400px;
+    }
+
+    .portada4 {
+        margin: 120px;
+        opacity: none;
+        width: 400px;
+        height: 400px;
+    }
+
+    .titulo__portada1 {
+        font-size: 2rem;
+        height: 600px;
+    }
+
+    .titulo__portada2 {
+        font-size: 2rem;
+        height: 600px;
+    }
+
+    .titulo__portada3 {
+        font-size: 2rem;
+        height: 600px;
+    }
+    
+    .titulo__portada4 {
+        font-size: 2rem;
+        height: 600px;
+    }
+
+}
