--- a/css/estilo.css
+++ b/css/estilo.css
@@ -112,27 +112,29 @@ footer {
 
 
     section,
-.section__index {
-  
-    height: 1000px;
+    .section__index {
 
-}
+        height: 1000px;
 
-.h2 {
-    font-size: 1.8rem;
-}
+    }
 
-.d-flex .flex-row-reverse {
-    width: 400px;
-    height: 400px;
-}
-.d-flex .flex-row-reverse {
-    flex-direction: column;
-    flex-wrap: wrap;
-}
-.flex-row-reverse {
-    flex-direction: column;
-}
+    .h2 {
+        font-size: 1.8rem;
+    }
+
+    .d-flex .flex-row-reverse {
+        width: 400px;
+        height: 400px;
+    }
+
+    .d-flex .flex-row-reverse {
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+
+    .flex-row-reverse {
+        flex-direction: column;
+    }
 }
 
 @media screen and (max-width:500px) {
@@ -149,7 +151,7 @@ footer {
         margin: 1rem;
     }
 
-    
+
 }
 
 
@@ -477,12 +479,13 @@ span,
         gap: 30px;
 
     }
+
     .row {
         margin-right: 0px;
         margin-left: 0px;
     }
 
-    
+
     .titulo__tour {
         margin: auto;
         margin-bottom: 20rem;
@@ -494,7 +497,7 @@ span,
 @media screen and (max-width:768px) {
 
     .main__tour {
- 
+
         height: 2000px;
     }
 
@@ -537,7 +540,7 @@ span,
         margin: 0px;
     }
 
-   
+
 
 }
 
@@ -584,167 +587,134 @@ span,
     background-color: #131311;
 }
 
-.contenedor__albums {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    z-index: 1;
-
-}
-
-.portada1 {
-    background: url(../imagenes/blurryfaceportada.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    border-radius: 10px;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    background-color: #4b543a;
-
-    box-shadow: 0px 0px 20px 0px #eb523b;
-
-
-    margin: 20px;
-    width: 310px;
-    height: 310px;
-    opacity: .8;
-    transition: 0.5s;
-}
-
-.portada1:hover {
-    width: 380px;
-    height: 380px;
-}
-
-.titulo__portada1 {
-    font-size: 1rem;
-    color: white;
-    height: 500px;
-    display: flex;
-    align-items: flex-end;
-}
-
-.portada2 {
+.tarjeta__anim {
     background: url(../imagenes/trenchportada.png);
     background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
-
-
-    border-radius: 10px;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    background-color: #4b543a;
-
-    box-shadow: 0px 0px 20px 0px #5e5815;
-
-
-    margin: 20px;
-    width: 310px;
-    height: 310px;
-    opacity: .8;
-    transition: 0.5s;
-}
-
-.portada2:hover {
-    width: 380px;
-    height: 380px;
-    opacity: 1;
-}
-
-.titulo__portada2 {
-    font-size: 1rem;
-    color: white;
-    height: 500px;
-    display: flex;
-    align-items: flex-end;
-}
-
-
-.portada3 {
-    background: url(../imagenes/scaledicy.png);
-    background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-
-    border-radius: 10px;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    background-color: #4b543a;
-
-    box-shadow: 0px 0px 20px 0px #fd89ac;
-
-
-    width: 310px;
-    height: 310px;
-    opacity: .8;
-    transition: 0.5s;
+    transition: .5s;
+    width: 350px;
+    height: 350px;
 }
 
-.portada3:hover {
+.card.tarjeta__anim:hover {
     width: 380px;
     height: 380px;
 }
 
-.titulo__portada3 {
-    font-size: 1rem;
-    color: white;
-    height: 500px;
-    display: flex;
-    align-items: flex-end;
+
+.card {
+    margin: 3.5rem;
 }
 
-
-.portada4 {
+.tarjeta__anim1 {
     background: url(../imagenes/vesseltop.png);
     background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
-
-    border-radius: 10px;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    background-color: #4b543a;
-
-    box-shadow: 0px 0px 20px 0px #d0d0cf;
-
-
-    margin: 20px;
-    width: 310px;
-    height: 310px;
-    opacity: .8;
-    transition: 0.5s;
+    background-repeat: no-repeat;
+    transition: .5s;
+    width: 350px;
+    height: 350px;
 }
 
-.portada4:hover {
+.card.tarjeta__anim1:hover {
     width: 380px;
     height: 380px;
+
 }
 
-.titulo__portada4 {
-    font-size: 1rem;
+.tarjeta__anim2 {
+    background: url(../imagenes/scaledicy.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transition: .5s;
+    width: 350px;
+    height: 350px;
+}
+
+.tarjeta__anim2:hover {
+    width: 380px;
+    height: 380px;
+
+}
+
+
+.tarjeta__anim3 {
+    background: url(../imagenes/blurryfaceportada.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transition: .5s;
+    width: 350px;
+    height: 350px;
+}
+
+.tarjeta__anim3:hover {
+    width: 380px;
+    height: 380px;
+
+}
+
+.contenedor__año {
     color: white;
     height: 500px;
-    display: flex;
-    align-items: flex-end;
+    margin-top: 380px;
+}
+
+.tarjeta__anim:hover {
+    width: 350px;
+    height: 350px;
+    color: red;
+
+}
+
+.marg__contenedor {
+    margin: 3.5rem;
+}
+
+.card-img-top {
+    transition: .5s;
+    width: 200px;
+
+}
+
+.card-img-top:hover {
+    width: 350px;
+    height: 350px;
+    color: white;
+
+}
+
+/* MEDIA ALBUM */
+
+@media screen and (max-width:1024px) {
+
+    .main__albums {
+        height: 1250px;
+    }
+
+       .card.tarjeta__anim:hover {
+       
+            display: none;
+
+        }
+
+        .card.tarjeta__anim1:hover {
+       
+            display: none;
+        }
+
+        .card.tarjeta__anim2:hover {
+            
+            display: none;
+
+        }
+
+        .card.tarjeta__anim3:hover {
+            
+           display: none;
+        }
+    
+
 }
