--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,6 +18,7 @@
 .navbar {
     background-color: #4b543a;
     width: 100%;
+    z-index: 2;
 }
 
 
@@ -532,6 +533,7 @@ span,
 .card {
     margin: 3.5rem;
     margin-top: 180px;
+    z-index: 1;
 }
 
 .tarjeta__anim1 {
@@ -652,9 +654,35 @@ span,
 }
 
 
-@media screen and (max-width:768px) {
+@media screen and (min-width:320px) {
+
+    
     .main__albums {
         height: 2800px;
+    }
+
+    .card.tarjeta__anim {
+        width: 350px;
+        height: 350px;
+    }
+
+    .card.tarjeta__anim1 {
+        width: 350px;
+        height: 350px;
+
+    }
+
+    .card.tarjeta__anim2 {
+        width: 350px;
+        height: 350px;
+  
+
+    }
+
+    .card.tarjeta__anim3 {
+        width: 350px;
+        height: 350px;
+       
     }
 
 }
