--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,9 +1,12 @@
-/* NAVBAR ESTILO */
 
+ 
+
+
+/* NAVBAR ESTILO */
 .navbar {
     background-color: #4b543a;
     width: 100%;
-
+    z-index: 2;
     .navbar-brand {
         width: 200px;
         height: 120px;
@@ -63,24 +66,9 @@ section,
 
 /* FOOTER ESTILO */
 
-footer {
-    background-color: #4b543a;
-    width: 100%;
-    height: 135px;
-    .h1__footer {
-        color: #b9ac28;
-    }
 
-    .icono_footer {
-        color: #131311;
 
-        &:hover {
-            color: #b9ac28;
 
-        }
-
-    }
-}
 
 
 
