--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box; }
+
 /* NAVBAR ESTILO */
 .navbar {
   background-color: #4b543a;
@@ -25,9 +30,24 @@
   height: 850px;
   max-width: 100%;
   min-width: 100%; }
-  .main__index .main__titulo1,
-  .main__index .main__titulo2 {
-    color: white; }
+
+.main__index:before {
+  position: absolute;
+  top: 0;
+  bottom: -48px;
+  right: 0;
+  left: 0;
+  content: "";
+  background: black;
+  opacity: .4;
+  z-index: 1; }
+
+.main__titulo1,
+.main__titulo2 {
+  color: white; }
+
+.text-center {
+  z-index: 1; }
 
 /* MAIN ESTILO */
 /* SECTION ESTILO */
@@ -46,6 +66,17 @@ section,
 
 /* SECTION ESTILO */
 /* FOOTER ESTILO */
+.f__index {
+  background-color: #4b543a;
+  width: 100%;
+  height: 135px; }
+  .f__index .h1__footer {
+    color: #b9ac28; }
+  .f__index .icono_footer {
+    color: #131311; }
+    .f__index .icono_footer:hover {
+      color: #b9ac28; }
+
 /* MAIN ESTILO */
 .main__tour {
   width: 100%;
@@ -101,7 +132,7 @@ section,
 /* -----------------------  ALBUMS  ------------------------- */
 .main__albums {
   width: 100%;
-  height: 1700px;
+  height: 500px;
   background-color: #131311; }
   .main__albums .album__titulo {
     width: 100%;
@@ -313,13 +344,20 @@ span,
       color: #b9ac28; }
 
 /* MEDIA INDEX */
+@media screen and (max-width: 928px) {
+  section,
+  .section__index {
+    height: 922px; } }
+
 @media screen and (max-width: 768px) {
   section,
   .section__index {
-    height: 1200px; }
+    height: 1193px; }
     section .h2,
     .section__index .h2 {
       font-size: 1.8rem; }
+  .h1 {
+    margin-bottom: 0rem; }
   .d-flex .flex-row-reverse {
     flex-direction: column;
     flex-wrap: wrap;
@@ -333,6 +371,11 @@ span,
       font-size: 2rem; }
       .header__all .h1 a .fa-brands {
         margin: 1rem; } }
+
+@media screen and (max-width: 320px) {
+  .d-flex .justify-content-center .align-items-center {
+    width: 280px;
+    height: 289px; } }
 
 /* MEDIA INDEX */
 /* MEDIA TOUR */
@@ -379,7 +422,7 @@ span,
 /* MEDIA ALBUM */
 @media screen and (min-width: 320px) {
   .main__albums {
-    height: 2800px; }
+    height: 2813px; }
   .card.tarjeta__anim {
     width: 350px;
     height: 350px; }
@@ -392,3 +435,27 @@ span,
   .card.tarjeta__anim3 {
     width: 350px;
     height: 350px; } }
+
+/* MEDIA GALERIA */
+@media screen and (max-width: 768px) {
+  .main__galeria {
+    height: 7500px; } }
+
+.galeria__titulo {
+  padding: 0px; }
+
+.img__galeriaT {
+  width: 300px;
+  height: 300px; }
+
+/* MEDIA GALERIA */
+/* MEDIA OPINIONES */
+@media screen and (max-width: 768px) {
+  .main__opiniones {
+    height: 863px; }
+  .contenedor__form {
+    margin-bottom: 60px; }
+  .containter-fluid {
+    width: 75%; }
+  .d-flex .flex-row-reverse {
+    width: 315px; } }
