--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,5 +1,9 @@
 
- 
+ * {
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+ }
 
 
 /* NAVBAR ESTILO */
@@ -34,11 +38,24 @@
     height: 850px;
     max-width: 100%;
     min-width: 100%;
-
-    .main__titulo1,
-    .main__titulo2 {
-        color: white;
-    }
+}
+.main__index:before {
+    position: absolute;
+    top: 0;
+    bottom: -48px;
+    right: 0;
+    left: 0;
+    content: "";
+    background: rgb(0, 0, 0);
+    opacity: .4;
+    z-index: 1;
+}
+.main__titulo1,
+.main__titulo2 {
+    color: white;
+}
+.text-center {
+    z-index: 1;
 }
 
 /* MAIN ESTILO */
@@ -66,6 +83,22 @@ section,
 
 /* FOOTER ESTILO */
 
+.f__index {
+    background-color: #4b543a;
+    width: 100%;
+    height: 135px;
+    .h1__footer {
+        color: #b9ac28;
+    }
+    .icono_footer {
+        color: #131311;
+        &:hover {
+            color: #b9ac28;
+
+        }
+
+    }
+}
 
 
 
