--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -34,6 +34,8 @@ $paletacolores: (
     gap: 10px;
     flex-wrap: wrap;
     justify-content: center;
+    margin: auto;
+    padding-bottom: 410px;
 }
 .img__galeriaT {
     width: 400px;
