--- a/css/main.css
+++ b/css/main.css
@@ -396,6 +396,15 @@ span,
   .container {
     padding-right: 0px; } }
 
+@media screen and (max-width: 1070px) {
+  .main__tour {
+    height: 2000px; }
+  .row .d-flex {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px; } }
+
 @media screen and (max-width: 768px) {
   .main__tour {
     height: 2000px; }
@@ -434,9 +443,18 @@ span,
 
 /* MEDIA TOUR */
 /* MEDIA ALBUM */
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 990px) {
   .main__albums {
-    height: 1750px; }
+    height: 3000px; } }
+
+@media screen and (min-width: 991px) {
+  .main__albums {
+    height: 1800px; } }
+
+@media screen and (min-width: 320px) {
+  /* .main__albums {
+        height: 1750px;
+    } */
   .card.tarjeta__anim {
     width: 350px;
     height: 350px; }
