--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -73,6 +73,17 @@
         padding-right: 0px;
     }
 }
+@media screen and (max-width:1070px) {
+    .main__tour {
+        height: 2000px;
+    }
+    .row .d-flex {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+    }
+}
 @media screen and (max-width:768px) {
 
     .main__tour {
@@ -146,13 +157,23 @@
 
 
 /* MEDIA ALBUM */
+@media screen and (max-width:990px) {
+    .main__albums {
+        height: 3000px;
+    }
+}
+@media screen and (min-width:991px) {
+    .main__albums {
+        height: 1800px;
+    }
 
+}
 @media screen and (min-width:320px) {
 
 
-    .main__albums {
+    /* .main__albums {
         height: 1750px;
-    }
+    } */
 
     .card.tarjeta__anim {
         width: 350px;
