--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -5,6 +5,7 @@
     }
 
 }
+
 @media screen and (max-width:928px) {
 
     section,
@@ -73,9 +74,9 @@
         padding-right: 0px;
     }
 }
-@media screen and (max-width:1070px) {
+@media screen and (max-width:1102px) {
     .main__tour {
-        height: 2000px;
+        height: 2500px;
     }
     .row .d-flex {
         flex-direction: column;
@@ -83,7 +84,45 @@
         align-items: center;
         gap: 30px;
     }
+
 }
+@media screen and (min-width:1074px) {
+    .main__tour .row {
+        margin-right: 21px;
+    }
+}
+
+@media screen and (min-width:1072px) {
+    .sad {
+        height: 136px;
+        width: 353px;
+    }
+
+    .main__tour .row {
+        margin-right: 24px;
+    }
+}
+
+@media screen and (min-width:1071px) {
+
+    .main__tour .row {
+        margin-right: 24px;
+    }
+}
+
+@media screen and (max-width:1070px) {
+    .main__tour {
+        height: 2000px;
+    }
+
+    .row .d-flex {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+    }
+}
+
 @media screen and (max-width:768px) {
 
     .main__tour {
@@ -138,7 +177,7 @@
 
 @media screen and (max-width:320px) {
 
-  
+
 
     .titulo__tour {
         margin: auto;
@@ -157,17 +196,20 @@
 
 
 /* MEDIA ALBUM */
+
 @media screen and (max-width:990px) {
     .main__albums {
         height: 3000px;
     }
 }
+
 @media screen and (min-width:991px) {
     .main__albums {
         height: 1800px;
     }
 
 }
+
 @media screen and (min-width:320px) {
 
 
@@ -223,11 +265,13 @@
     .opiniones__titulo {
         font-size: 1rem;
     }
+
     .opiniones__titulos {
         font-size: 3rem;
     }
 
 }
+
 @media screen and (max-width:768px) {
 
     .main__opiniones {
